update swagger urls
